<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/welcome_home" />
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/lights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lights"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:textSize="25sp" />
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:textSize="25sp" />
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/kids_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kids_tv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:textSize="25sp" />
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:textSize="25sp" />
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:textSize="25sp" />
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/petFeeder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_feeder"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:textSize="25sp" />
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/voiceCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice_command"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:textSize="25sp" />
    <View style="@style/Divider"/>

</LinearLayout>