<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:columnCount="2"
    android:rowCount="3"
    android:alignmentMode="alignMargins"
    android:columnOrderPreserved="false">

    <Button
        android:id="@+id/button_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:text="@string/tv"
        android:backgroundTint="@color/hospital_green"/>

    <Button
        android:id="@+id/button_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:text="@string/phone"
        android:backgroundTint="@color/hospital_green"/>

    <Button
        android:id="@+id/button_lights"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:text="@string/lights"
        android:backgroundTint="@color/hospital_green"/>

    <Button
        android:id="@+id/button_radio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:text="@string/radio"
        android:backgroundTint="@color/hospital_green"/>

    <Button
        android:id="@+id/button_thermostat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:text="@string/thermostat"
        android:backgroundTint="@color/hospital_green"/>

    <Button
        android:id="@+id/button_audio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:text="@string/audio"
        android:backgroundTint="@color/hospital_green"/>

    <TextView
        android:id="@+id/textview_device_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</GridLayout>
