<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <Button
        android:id="@+id/integrate_new_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integrate_new_device"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/troubleshoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/troubleshoot"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/integrate_new_device"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_user"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/troubleshoot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
